--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -52,23 +52,14 @@ h2 {
 }
 
   
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-    overflow:hidden;padding:10px 20px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-    font-weight:normal;overflow:hidden;padding:10px 20px;word-break:normal;}
-.tg .tg-cly1{text-align:left;vertical-align:middle}
-.tg .tg-0lax{
-    text-align:middle;
-    vertical-align:middle;
-    width: 18%;
-    height: 300px;
-}
+
 
 .box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 85%;
+    height: 85%;
+    vertical-align: middle;
+    position: relative;
+    z-index: 1;
 }
 
 .centered_table {
@@ -82,6 +73,53 @@ h2 {
 #tableHomePage td,
 #tableHomePage th,
 #tableHomePage tr {
-    border-collapse: collapse;
+    border-spacing: 20px;
     border:0px solid transparent;
+    text-align:center;
+}
+
+
+.mouse_hover_image img {
+    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+      filter: blur(2px);
+    height: 90%;
+    width: 90%;
+}
+
+.mouse_hover_image {
+    position: relative;
+    top:0;
+    left:0;
+}
+
+.text_on_image {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-text-stroke: 1px black;
+    z-index: 2;
+}
+
+.stars {
+    position: absolute;
+    left: 0;
+    up: 0;
+}
+
+.stars img {
+    width: 10px;
+    z-index: 3;
+    border: 1px solid black;
+}
+
+
+
+.test_image {
+    width: 25px;
 }
