--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -59,7 +59,6 @@ h2 {
     height: 85%;
     vertical-align: middle;
     position: relative;
-    z-index: 1;
 }
 
 .centered_table {
@@ -71,19 +70,18 @@ h2 {
 #tableHomePage,
 #tableHomePage table,
 #tableHomePage td,
-#tableHomePage th,
-#tableHomePage tr {
-    border-spacing: 20px;
+#tableHomePage tr{
+    border-spacing: 15px;
     border:0px solid transparent;
     text-align:center;
 }
 
 
-.mouse_hover_image img {
+.manga_cover {
     -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
       filter: blur(2px);
-    height: 90%;
-    width: 90%;
+    height: 95%;
+    width: 95%;
 }
 
 .mouse_hover_image {
@@ -95,7 +93,7 @@ h2 {
 .text_on_image {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -103,23 +101,21 @@ h2 {
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
     -webkit-text-stroke: 1px black;
-    z-index: 2;
 }
 
 .stars {
     position: absolute;
-    left: 0;
-    up: 0;
+    top: 70%;
+    left: 16%;
 }
 
 .stars img {
-    width: 10px;
-    z-index: 3;
-    border: 1px solid black;
+    width: 20px;
 }
 
-
-
-.test_image {
-    width: 25px;
+#tableHomePage td td,
+#tableHomePage td table {
+    border-spacing: 0px;
+    border:0px solid transparent;
+    text-align:center;
 }
