--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -33,9 +33,11 @@ h2 {
 
 
 .house_homepage {
-    height:50px;
-    width:50px;
+    height:30px;
+    width:30px;
+    padding: 10px;
     object-fit: cover;
+    border-radius: 5px;
 }
 .loupe_homepage {
     width: 20px;
@@ -62,7 +64,7 @@ h2 {
 }
 
 .centered_table {
-    width : 92%;
+    width : 90%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -71,23 +73,32 @@ h2 {
 #tableHomePage table,
 #tableHomePage td,
 #tableHomePage tr{
-    border-spacing: 15px;
     border:0px solid transparent;
     text-align:center;
-}
-
-
-.manga_cover {
-    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
-      filter: blur(2px);
-    height: 95%;
-    width: 95%;
+    border-spacing: 0px;
+    padding-bottom: 30px;
 }
 
 .mouse_hover_image {
     position: relative;
     top:0;
     left:0;
+}
+
+.box:hover .text_on_image {
+    color: white;
+    -webkit-text-stroke: 1px black;
+}
+
+.box:hover .stars img {
+    width: 25px;
+}
+
+.box:hover .manga_cover {
+    -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+      filter: blur(2px);
+    /*height: 95%;
+    width: 95%; Non pour l'instant ça fait tout déplacer c'est chiant*/ 
 }
 
 /* Titre du manga sur la couverture quand
@@ -98,36 +109,40 @@ tu passes la souris dessus */
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: transparent;
     font-size: 30px;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 0px black;
 }
 
-.stars {
+#tableHomePage td table {
     position: absolute;
     top: 70%;
     margin-left: 10%;
-    margin-right: 10%;
+    width: 80%;
 }
 
 /* taille des étoiles */
 .stars img {
-    width: 70%;
+    width: 0%;
 }
 
 /* Cible les sous tableaux d'étoiles */
-#tableHomePage td td,
-#tableHomePage td table {
+#tableHomePage td td {
     border-spacing: 0px;
     border:0px solid transparent;
 }
 
 
 
+
+
+/* Page description de manga  */
+
 #tableau_description {
     border : 3px solid;
+    table-layout:fixed;
 }
 
 #tableau_description table,
@@ -137,6 +152,7 @@ tu passes la souris dessus */
     border: 0px solid;
     width: 50%;
     text-align: center;
+    table-layout:fixed;
 }
 
 #manga_cover_description {
@@ -162,4 +178,10 @@ tu passes la souris dessus */
 
 #tableau_chapitres tr {
     margin-left: 20px;
+}
+
+#lecteur_pdf {
+    width: 90%;
+    margin-left: 5%;
+    height: 95%;
 }
